feat: fim de aula menu

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <li><a href="contato.html">Contato</a></li>
         </ul>
     </div>
-    
+    <div class="img">
+        <img src="img/deadpool.png" alt="dol">
+    </div>
 </body>
 </html>
